[package]
name = "be2"
version = "0.1.0"
edition = "2024"

[dependencies]
rustybuzz = "*"
eframe = "0.34.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1"
tracing-subscriber = "0.3"